# pyxon-ai-entry-task

./: .env.example  .gitignore  Dockerfile  PR_SUBMISSION_TEMPLATE.md  PULL_REQUEST.md  QUICKSTART.md  README.md  STATUS_REPORT.md  full_diff.txt  pyproject.toml  requirements-minimal.txt  requirements.txt
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 001_initial.py
api/: main.py  schemas.py
api/routes/: __init__.py  health.py  parser.py  retrieval.py
benchmarks/: test_retrieval_accuracy.py
docs/: 03_DEPLOYMENT_GUIDE.md  04_TECHNICAL_MANUAL.md  06_API_REFERENCE.md  07_RAG_TECHNIQUES_COMPARISON.md  09_DELIVERABLES_CHECKLIST.md  10_READINESS_REPORT.md  BENCHMARKS.md  QUICKSTART.md  USER_GUIDE.md  architecture.md
interface/: app.py
scripts/: debug_env.py  debug_llm_raw.py  debug_settings.py  detect_language_ai.py  test_llm_connection.py  test_mistral_import.py  test_rag.py
src/: __init__.py
src/arabic_support/: README.md
src/chunking/: __init__.py  chunk_validator.py  chunking_strategy.py  dynamic_chunker.py  fixed_chunker.py
src/config/: __init__.py  constants.py  settings.py
src/ingestion/: __init__.py  base.py  docx_extractor.py  image_extractor.py  loader.py  pdf_extractor.py  txt_extractor.py
src/knowledge_store/: __init__.py  embeddings.py  indexer.py  sql_db.py  vector_db.py
src/llm_generation/: README.md
src/parsing/: __init__.py  classifier.py  llm_interpreter.py  semantic_extractor.py  structural_extractor.py
src/rag_layer/: __init__.py  context_formatter.py  reranker.py  retriever.py
