[project]
name = "uniguide-ai-supervisor"
version = "0.1.0"
description = "University Study Supervisor Bot using LangGraph and PostgreSQL"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core LangChain & LangGraph (Updated to latest stable 0.3.x ecosystem)
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-cli>=0.4.9",
    "langgraph-api>=0.5.37",
    "langchain-model-profiles>=0.0.4",
    "langchain-mcp-adapters>=0.1.13",
    
    
    # Model Providers
    "langchain-openai>=1.1.1",
    "langchain-google-genai>=3.1.0",
    "langchain-google-vertexai>=3.0.3",
    "langchain-mistralai>=1.1.0",
    "langchain-anthropic>=1.0.3",
    
    
    # Tooling & Adapters
    "langchain-tavily>=0.2.13",
    "tavily-python>=0.7.13",
    "tavily>=1.1.0",
    "mcp>=1.21.1",
    
    # Backend API & Config
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.2.0",
    
    # Data Ingestion & Processing
    "pandas>=2.2.0",      
    "openpyxl>=3.1.2",    
    "alembic>=1.13.0",    
    "pypdf>=6.2.0",
    
    # Database (PostgreSQL + Vector)
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2==2.9.11",
    
    # Data & Utilities
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "streamlit==1.53.1",

    # Observability
    "langsmith>=0.4.43",
]

# NEW STANDARD: Use dependency-groups instead of tool.uv.dev-dependencies
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.8",
    "sounddevice>=0.5.3",
    "scipy>=1.16.3",
]

[build-system]
requires = ["hatchling", "setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"